src-gen/antlr4/Java1_4Parser.java
// Generated from Java1_4.g4 by ANTLR 4.13.2
package antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class Java1_4Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, WHITESPACE=47, COMMENT=48, MODIFIER=49, BASICTYPE=50, ABSTRACT=51, 
		BOOLEAN=52, BREAK=53, BYTE=54, CASE=55, CATCH=56, CHAR=57, CLASS=58, CONST=59, 
		CONTINUE=60, DEFAULT=61, DO=62, DOUBLE=63, ELSE=64, EXTENDS=65, FINAL=66, 
		FINALLY=67, FLOAT=68, FOR=69, GOTO=70, IF=71, IMPLEMENTS=72, IMPORT=73, 
		INSTANCEOF=74, INT=75, INTERFACE=76, LONG=77, NATIVE=78, NEW=79, PACKAGE=80, 
		PRIVATE=81, PROTECTED=82, PUBLIC=83, RETURN=84, SHORT=85, STATIC=86, STRICTFP=87, 
		SUPER=88, SWITCH=89, SYNCHRONIZED=90, THIS=91, THROW=92, THROWS=93, TRANSIENT=94, 
		TRY=95, VOID=96, VOLATILE=97, WHILE=98, ASSERT=99, LITERAL=100, INTEGERLITERAL=101, 
		FLOATINGPOINTLITERAL=102, CHARACTERLITERAL=103, BOOLEANLITERAL=104, STRINGLITERAL=105, 
		NULLLITERAL=106, IDENTIFIER=107, UNICODEINPUTCHARACTER=108;
	public static final int
		RULE_identifier = 0, RULE_qualifiedIdentifier = 1, RULE_expression = 2, 
		RULE_type = 3, RULE_statementExpression = 4, RULE_constantExpression = 5, 
		RULE_expression1 = 6, RULE_expression1Rest = 7, RULE_expression2 = 8, 
		RULE_expression2Rest = 9, RULE_expression3 = 10, RULE_primary = 11, RULE_identifierSuffix = 12, 
		RULE_prefixOp = 13, RULE_postfixOp = 14, RULE_infixOp = 15, RULE_assignmentOp = 16, 
		RULE_eqSign = 17, RULE_selector = 18, RULE_superSuffix = 19, RULE_arguments = 20, 
		RULE_bracketsOpt = 21, RULE_creator = 22, RULE_innerCreator = 23, RULE_arrayCreatorRest = 24, 
		RULE_classCreatorRest = 25, RULE_arrayInitializer = 26, RULE_variableInitializer = 27, 
		RULE_parExpression = 28, RULE_block = 29, RULE_blockStatements = 30, RULE_blockStatement = 31, 
		RULE_localVariableDeclarationStatement = 32, RULE_elseKeyword = 33, RULE_finallyKeyword = 34, 
		RULE_statement = 35, RULE_catches = 36, RULE_catchClause = 37, RULE_switchBlockStatementGroups = 38, 
		RULE_switchBlockStatementGroup = 39, RULE_switchLabel = 40, RULE_moreStatementExpressions = 41, 
		RULE_forInit = 42, RULE_forUpdate = 43, RULE_modifiersOpt = 44, RULE_variableDeclarators = 45, 
		RULE_constantDeclaratorsRest = 46, RULE_variableDeclarator = 47, RULE_constantDeclarator = 48, 
		RULE_variableDeclaratorRest = 49, RULE_constantDeclaratorRest = 50, RULE_variableDeclaratorId = 51, 
		RULE_compilationUnit = 52, RULE_importDeclaration = 53, RULE_typeDeclaration = 54, 
		RULE_classOrInterfaceDeclaration = 55, RULE_classDeclaration = 56, RULE_interfaceDeclaration = 57, 
		RULE_typeList = 58, RULE_classBody = 59, RULE_interfaceBody = 60, RULE_classBodyDeclaration = 61, 
		RULE_memberDecl = 62, RULE_methodOrFieldDecl = 63, RULE_methodOrFieldRest = 64, 
		RULE_interfaceBodyDeclaration = 65, RULE_interfaceMemberDecl = 66, RULE_interfaceMethodOrFieldDecl = 67, 
		RULE_interfaceMethodOrFieldRest = 68, RULE_methodDeclaratorRest = 69, 
		RULE_interfaceMethodDeclaratorRest = 70, RULE_voidInterfaceMethodDeclaratorRest = 71, 
		RULE_constructorDeclaratorRest = 72, RULE_qualifiedIdentifierList = 73, 
		RULE_formalParameters = 74, RULE_formalParameter = 75, RULE_methodBody = 76;
	private static String[] makeRuleNames() {
		return new String[] {
			"identifier", "qualifiedIdentifier", "expression", "type", "statementExpression", 
			"constantExpression", "expression1", "expression1Rest", "expression2", 
			"expression2Rest", "expression3", "primary", "identifierSuffix", "prefixOp", 
			"postfixOp", "infixOp", "assignmentOp", "eqSign", "selector", "superSuffix", 
			"arguments", "bracketsOpt", "creator", "innerCreator", "arrayCreatorRest", 
			"classCreatorRest", "arrayInitializer", "variableInitializer", "parExpression", 
			"block", "blockStatements", "blockStatement", "localVariableDeclarationStatement", 
			"elseKeyword", "finallyKeyword", "statement", "catches", "catchClause", 
			"switchBlockStatementGroups", "switchBlockStatementGroup", "switchLabel", 
			"moreStatementExpressions", "forInit", "forUpdate", "modifiersOpt", "variableDeclarators", 
			"constantDeclaratorsRest", "variableDeclarator", "constantDeclarator", 
			"variableDeclaratorRest", "constantDeclaratorRest", "variableDeclaratorId", 
			"compilationUnit", "importDeclaration", "typeDeclaration", "classOrInterfaceDeclaration", 
			"classDeclaration", "interfaceDeclaration", "typeList", "classBody", 
			"interfaceBody", "classBodyDeclaration", "memberDecl", "methodOrFieldDecl", 
			"methodOrFieldRest", "interfaceBodyDeclaration", "interfaceMemberDecl", 
			"interfaceMethodOrFieldDecl", "interfaceMethodOrFieldRest", "methodDeclaratorRest", 
			"interfaceMethodDeclaratorRest", "voidInterfaceMethodDeclaratorRest", 
			"constructorDeclaratorRest", "qualifiedIdentifierList", "formalParameters", 
			"formalParameter", "methodBody"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'?'", "':'", "'('", "')'", "'['", "']'", "'++'", "'--'", 
			"'!'", "'~'", "'+'", "'-'", "'||'", "'&&'", "'|'", "'^'", "'&'", "'=='", 
			"'!='", "'<'", "'>'", "'<='", "'>='", "'<<'", "'>>'", "'>>>'", "'*'", 
			"'/'", "'%'", "'+='", "'-='", "'*='", "'/='", "'&='", "'|='", "'^='", 
			"'%='", "'<<='", "'>>='", "'>>>='", "'='", "','", "'{'", "'}'", "';'", 
			null, null, null, null, "'abstract'", "'boolean'", "'break'", "'byte'", 
			"'case'", "'catch'", "'char'", "'class'", "'const'", "'continue'", "'default'", 
			"'do'", "'double'", "'else'", "'extends'", "'final'", "'finally'", "'float'", 
			"'for'", "'goto'", "'if'", "'implements'", "'import'", "'instanceof'", 
			"'int'", "'interface'", "'long'", "'native'", "'new'", "'package'", "'private'", 
			"'protected'", "'public'", "'return'", "'short'", "'static'", "'strictfp'", 
			"'super'", "'switch'", "'synchronized'", "'this'", "'throw'", "'throws'", 
			"'transient'", "'try'", "'void'", "'volatile'", "'while'", "'assert'", 
			null, null, null, null, null, null, "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "WHITESPACE", 
			"COMMENT", "MODIFIER", "BASICTYPE", "ABSTRACT", "BOOLEAN", "BREAK", "BYTE", 
			"CASE", "CATCH", "CHAR", "CLASS", "CONST", "CONTINUE", "DEFAULT", "DO", 
			"DOUBLE", "ELSE", "EXTENDS", "FINAL", "FINALLY", "FLOAT", "FOR", "GOTO", 
			"IF", "IMPLEMENTS", "IMPORT", "INSTANCEOF", "INT", "INTERFACE", "LONG", 
			"NATIVE", "NEW", "PACKAGE", "PRIVATE", "PROTECTED", "PUBLIC", "RETURN", 
			"SHORT", "STATIC", "STRICTFP", "SUPER", "SWITCH", "SYNCHRONIZED", "THIS", 
			"THROW", "THROWS", "TRANSIENT", "TRY", "VOID", "VOLATILE", "WHILE", "ASSERT", 
			"LITERAL", "INTEGERLITERAL", "FLOATINGPOINTLITERAL", "CHARACTERLITERAL", 
			"BOOLEANLITERAL", "STRINGLITERAL", "NULLLITERAL", "IDENTIFIER", "UNICODEINPUTCHARACTER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Java1_4.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Java1_4Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(Java1_4Parser.IDENTIFIER, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Java1_4Listener ) ((Java1_4Listener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Java1_4Listener ) ((Java1_4Listener)listener).exitIdentifier(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QualifiedIdentifierContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public QualifiedIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedIdentifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Java1_4Listener ) ((Java1_4Listener)listener).enterQualifiedIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Java1_4Listener ) ((Java1_4Listener)listener).exitQualifiedIdentifier(this);
		}
	}

	public final QualifiedIdentifierContext qualifiedIdentifier() throws RecognitionException {
		QualifiedIdentifierContext _localctx = new QualifiedIdentifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_qualifiedIdentifier);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			identifier();
			setState(161);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(157);
					match(T__0);
					setState(158);
					identifier();
					}
					} 
				}
				setState(163);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public List<Expression1Context> expression1() {
			return getRuleContexts(Expression1Context.class);
		}
		public Expression1Context expression1(int i) {
			return getRuleContext(Expression1Context.class,i);
		}
		public AssignmentOpContext assignmentOp() {
			return getRuleContext(AssignmentOpContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Java1_4Listener ) ((Java1_4Listener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Java1_4Listener ) ((Java1_4Listener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			expression1();
			setState(168);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(165);
				assignmentOp();
				setState(166);
				expression1();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public BracketsOptContext bracketsOpt() {
			return getRuleContext(BracketsOptContext.class,0);
		}
		public TerminalNode BASICTYPE() { return getToken(Java1_4Parser.BASICTYPE, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Java1_4Listener ) ((Java1_4Listener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Java1_4Listener ) ((Java1_4Listener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		int _la;
		try {
			setState(182);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(170);
				identifier();
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(171);
					match(T__0);
					setState(172);
					identifier();
					}
					}
					setState(177);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(178);
				bracketsOpt();
				}
				break;
			case BASICTYPE:
				enterOuterAlt(_localctx, 2);
				{
				setState(180);
				match(BASICTYPE);
				setState(181);
				bracketsOpt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementExpressionContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Java1_4Listener ) ((Java1_4Listener)listener).enterStatementExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Java1_4Listener ) ((Java1_4Listener)listener).exitStatementExpression(this);
		}
	}

	public final StatementExpressionContext statementExpression() throws RecognitionException {
		StatementExpressionContext _localctx = new StatementExpressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statementExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstantExpressionContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ConstantExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Java1_4Listener ) ((Java1_4Listener)listener).enterConstantExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Java1_4Listener ) ((Java1_4Listener)listener).exitConstantExpression(this);
		}
	}

	public final ConstantExpressionContext constantExpression() throws RecognitionException {
		ConstantExpressionContext _localctx = new ConstantExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constantExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expression1Context extends ParserRuleContext {
		public Expression2Context expression2() {
			return getRuleContext(Expression2Context.class,0);
		}
		public Expression1RestContext expression1Rest() {
			return getRuleContext(Expression1RestContext.class,0);
		}
		public Expression1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Java1_4Listener ) ((Java1_4Listener)listener).enterExpression1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Java1_4Listener ) ((Java1_4Listener)listener).exitExpression1(this);
		}
	}

	public final Expression1Context expression1() throws RecognitionException {
		Expression1Context _localctx = new Expression1Context(_ctx, getState());
		enterRule(_localctx, 12, RULE_expression1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			expression2();
			setState(190);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(189);
				expression1Rest();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
